# arduinowrapper

./: .gitignore  CMakeLists.txt  README.md
testing/: CMakeLists.txt  CmakeLists.txt.gtest  testing_tcase1.cpp
testing/mockarduino/: Arduino.h  mockarduino.cpp
testing/testcases/: TC001_pins.cpp  TC002_interrupts.cpp  TC003_advancedio.cpp
